fix validator统计状态查询
